# micron_ws

./: CMakeLists.txt  README.md  micron_go.cpp
arduino/micron_arduino_position/: circular_buffer.hpp  micron_arduino_position.ino  serial_wrapper_arduino.hpp
arduino/micron_arduino_speed/: discrete_system.hpp  micron_arduino_speed.ino
config/: motor_dc_dsimo.jacl  position_controller.jacl  speed_controller.jacl
include/micron/: micron.hpp
sample/: current_sample.txt  error_current_sample.txt  error_speed_sample.txt  position_sample.txt  speed_sample.txt
